--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <link href='http://fonts.googleapis.com/css?family=Oswald:400,300' rel='stylesheet'>
     <link href="http://s3.amazonaws.com/codecademy-content/courses/ltp2/css/bootstrap.min.css" rel="stylesheet">
-    <link href="style.css" rel="stylesheet">
+    <link type="text/css" href="style.css" rel="stylesheet">
   </head>
   <body>
     <div class="header">
@@ -122,6 +122,6 @@
     </div> 
     
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <script src="app.js"></script>
+    <script type="text/javascript" src="app.js"></script>
   </body>
 </html>
