--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <link href='http://fonts.googleapis.com/css?family=Oswald:400,300' rel='stylesheet'>
     <link href="http://s3.amazonaws.com/codecademy-content/courses/ltp2/css/bootstrap.min.css" rel="stylesheet">
-    <link href="style.css" rel="stylesheet">
+    <link type="text/css" href="style.css" rel="stylesheet">
   </head>
   <body>
     <div class="header">
