--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <link href="http://s3.amazonaws.com/codecademy-content/courses/ltp2/css/bootstrap.min.css" rel="stylesheet">
-    <link type="text/css" href="style.css" rel="stylesheet">
+    <link type="text/css" rel="stylesheet" href="style.css"/>
   </head>
   <body>
     <div class="header">
