--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <link type="text/css" rel="stylesheet" href="style.css"/>
+    <title>Welcome to the Nizpott's website</title>
   </head>
   <body>
     <div class="header">
