--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Sprout</title>
+	<title>Nizpott</title>
 	<link rel="stylesheet" type="text/css" href="style.css"/>
 </head>
 <body>
-	<h1>Mystwood Publishers Ltd.</h1>
+	<h1>Test</h1>
 	<div class="hero">
-		<h2>Sprout.</h2>
-		<p>A book by J. Daniel Bedford</p>
-		<a href="#">Read now.</a>
+		<h2>Welcome to my webpage.</h2>
+		<p>A desing for test the webpage structure</p>
+		<a href="#">Go.</a>
 	</div>
-	<p id="footer">&copy; Mystwood Publishers Limited</p>
+	<p id="footer">&copy;2016 Kler</p>
 </body>
 </html>
