--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 	<h1>Test</h1>
+	<h6><a href="Comment/coment.php">Leave a comment</a></h6>
 	<div class="hero">
 		<h2>Welcome to my webpage.</h2>
 		<p>A desing for test the webpage structure</p>
