--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<h1>Test</h1>
-	<a href="Comment/coment.php"><h6>Leave a comment</h6></a>
+	<a href="Comment/coment.php">Leave a comment</a>
 	<div class="hero">
 		<h2>Welcome to my webpage.</h2>
 		<p>A desing for test the webpage structure</p>
