--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<a href="Comment/coment.php">Leave a comment</a>
 	<div class="hero">
 		<h2>Welcome to my webpage.</h2>
-		<p>A desing f122.4244154.15405402or test the webpage structure</p>
+		<p>A desing for test the webpage structure</p>
 		<a href="#">Go.</a>
 	</div>
 	<p id="footer">&copy;2016 Kler</p>
