--- a/index.html
+++ b/index.html
@@ -10,13 +10,33 @@
 	<link rel="stylesheet" type="text/css" href="style.css"/> <!-- CSS Style -->
 </head>
 <body>
-	<h1>Test</h1>
-	<a href="comentarios/index.html">Leave a comment</a>
-	<div class="hero">
-		<h2>Welcome to my webpage.</h2>
-		<p>A desing for test the webpage structure</p>
-		<a href="#">Go.</a>
+	<div class='container'> 
+		<div id='firstCarousel' class='carousel slide' data-ride="carousel"> <!-- carousel -->
+			<!-- Indicators -->
+			<ol class='carousel-indicators'>
+			<li data-target='firstCarousel' data-slide-to='0' class="active"></li>
+			<li data-target='firstCarousel' data-slide-to='2'></li>
+			<li data-target='firstCarousel' data-slide-to='3'></li>
+			<li data-target='firstCarousel' data-slide-to='4'></li>
+			</ol>
+			<!-- Content -->
+			<div class='carousel-iner' role='listbox'>
+				<div class='item active'>
+					<img src="http://files.vividscreen.info/soft/d8b781231562545ec6b0f992b9abb81c/Buenos-Aires-Argentina-1920x1080.jpg">
+				</div>
+				<div class='item'>
+					<img src='http://i.imgur.com/7LqRwsB.jpg'>
+				</div>
+				<div class='item'>
+					<img src='http://imgview.info/download/20151025/technology-code-computer-1920x1080.jpg'>
+				</div>
+				<div class='item'>
+					<img src='http://i.imgur.com/VlkmOEW.jpg'>
+				</div>
+			</div>
+			<!-- left and right controls -->
+			
+		</div>
 	</div>
-	<p id="footer">&copy;2016 Kler</p>
 </body>
 </html>
