--- a/index.html
+++ b/index.html
@@ -35,7 +35,14 @@
 				</div>
 			</div>
 			<!-- left and right controls -->
-			
+			<a class='left-carusel-control' href='#firstCarousel' role='button' data-slide='prev'>
+				<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+				<span class="sr-only">Previous</span>
+			</a>
+			<a class='right-carusel-control' href='#firstCarousel' role='button' data-slide='next'>
+				<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+				<span class="sr-only">Previous</span>
+			</a>
 		</div>
 	</div>
 </body>
