--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 			</a>
 			<a class='right-carusel-control' href='#firstCarousel' role='button' data-slide='next'>
 				<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-				<span class="sr-only">Previous</span>
+				<span class="sr-only">Next</span>
 			</a>
 		</div>
 	</div>
