--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" type="text/css" href="style.css"/> <!-- CSS Style -->
 </head>
 <body>
-	<div class='container'> 
+	<div class='container-fluid'> 
 		<div id='firstCarousel' class='carousel slide' data-ride="carousel"> <!-- carousel -->
 			<!-- Indicators -->
 			<ol class='carousel-indicators'>
