--- a/index.html
+++ b/index.html
@@ -22,16 +22,16 @@
 			<!-- Content -->
 			<div class='carousel-iner' role='listbox'>
 				<div class='item active'>
-					<img src="http://files.vividscreen.info/soft/d8b781231562545ec6b0f992b9abb81c/Buenos-Aires-Argentina-1920x1080.jpg">
+					<img src="http://files.vividscreen.info/soft/d8b781231562545ec6b0f992b9abb81c/Buenos-Aires-Argentina-1920x1080.jpg" widht='1280px' height='720px'>
 				</div>
 				<div class='item'>
-					<img src='http://i.imgur.com/7LqRwsB.jpg'>
+					<img src='http://i.imgur.com/7LqRwsB.jpg' widht='1280px' height='720px'>
 				</div>
 				<div class='item'>
-					<img src='http://imgview.info/download/20151025/technology-code-computer-1920x1080.jpg'>
+					<img src='http://imgview.info/download/20151025/technology-code-computer-1920x1080.jpg' widht='1280px' height='720px'>
 				</div>
 				<div class='item'>
-					<img src='http://i.imgur.com/VlkmOEW.jpg'>
+					<img src='http://i.imgur.com/VlkmOEW.jpg' widht='1280px' height='720px'>
 				</div>
 			</div>
 			<!-- left and right controls -->
