--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 		<div id='firstCarousel' class='carousel slide' data-ride="carousel"> <!-- carousel -->
 			<!-- Indicators -->
 			<ol class='carousel-indicators'>
-			<li data-target='firstCarousel' data-slide-to='0' class="active"></li>
-			<li data-target='firstCarousel' data-slide-to='2'></li>
-			<li data-target='firstCarousel' data-slide-to='3'></li>
-			<li data-target='firstCarousel' data-slide-to='4'></li>
+			<li data-target='#firstCarousel' data-slide-to='0' class="active"></li>
+			<li data-target='#firstCarousel' data-slide-to='2'></li>
+			<li data-target='#firstCarousel' data-slide-to='3'></li>
+			<li data-target='#firstCarousel' data-slide-to='4'></li>
 			</ol>
 			<!-- Content -->
 			<div class='carousel-iner' role='listbox'>
