--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			<li data-target='#firstCarousel' data-slide-to='4'></li>
 			</ol>
 			<!-- Content -->
-			<div class='carousel-iner' role='listbox'>
+			<div class='carousel-inner' role='listbox'>
 				<div class='item active'>
 					<img src="http://files.vividscreen.info/soft/d8b781231562545ec6b0f992b9abb81c/Buenos-Aires-Argentina-1920x1080.jpg" widht='1280px' height='720px'>
 				</div>
