--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
 <body>
 	<div id='firstCarousel' class='carousel slide' data-ride="carousel"> <!-- carousel -->
 		<!-- Indicators -->
-		<ol class='carousel-indicators'>
-		<li data-target='#firstCarousel' data-slide-to='0' class="active"></li>
-		<li data-target='#firstCarousel' data-slide-to='2'></li>
-		<li data-target='#firstCarousel' data-slide-to='3'></li>
-		<li data-target='#firstCarousel' data-slide-to='4'></li>
+		<ol class="carousel-indicators">
+		<li data-target="#firstCarousel" data-slide-to='0' class="active"></li>
+		<li data-target="#firstCarousel" data-slide-to='1'></li>
+		<li data-target="#firstCarousel" data-slide-to='2'></li>
+		<li data-target="#firstCarousel" data-slide-to='3'></li>
 		</ol>
+		
 		<!-- Content -->
 		<div class='carousel-inner' role='listbox'>
 			<div class='item active'>
