--- a/index.html
+++ b/index.html
@@ -10,42 +10,39 @@
 	<link rel="stylesheet" type="text/css" href="style.css"/> <!-- CSS Style -->
 </head>
 <body>
-	<div id="myCarousel" class="carousel slide" data-ride="carousel">
-    <!-- Indicators -->
-    <ol class="carousel-indicators">
-      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-      <li data-target="#myCarousel" data-slide-to="1"></li>
-      <li data-target="#myCarousel" data-slide-to="2"></li>
-      <li data-target="#myCarousel" data-slide-to="3"></li>
-    </ol>
-
-    <!-- Wrapper for slides -->
-    <div class="carousel-inner" role="listbox">
-      <div class="item active">
-        <img src="http://files.vividscreen.info/soft/d8b781231562545ec6b0f992b9abb81c/Buenos-Aires-Argentina-1920x1080.jpg" width="1200" height="700">
-      </div>
-
-      <div class="item">
-        <img src="http://i.imgur.com/7LqRwsB.jpg" width="1200" height="700">
-      </div>
-    
-      <div class="item">
-        <img src="http://imgview.info/download/20151025/technology-code-computer-1920x1080.jpg" width="1200" height="700">
-      </div>
-      <div class="item">
-        <img src="http://i.imgur.com/VlkmOEW.jpg" width="1200" height="700">
-      </div>
-    </div>
-
-    <!-- Left and right controls -->
-    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
+	<div id='firstCarousel' class='carousel slide' data-ride="carousel"> <!-- carousel -->
+		<!-- Indicators -->
+		<ol class="carousel-indicators">
+			<li data-target="#firstCarousel" data-slide-to='0' class="active"></li>
+			<li data-target="#firstCarousel" data-slide-to='1'></li>
+			<li data-target="#firstCarousel" data-slide-to='2'></li>
+			<li data-target="#firstCarousel" data-slide-to='3'></li>
+  		</ol>
+  
+	  	<!-- Content -->
+  		<div class='carousel-inner' role='listbox'>
+   			<div class='item active'>
+    			<img src="http://files.vividscreen.info/soft/d8b781231562545ec6b0f992b9abb81c/Buenos-Aires-Argentina-1920x1080.jpg" widht='1280px' height='720px'>
+		 	</div>
+   			<div class='item'>
+				<img src='http://i.imgur.com/7LqRwsB.jpg' widht='1280px' height='720px'>
+   			</div>
+			<div class='item'>
+    			<img src='http://imgview.info/download/20151025/technology-code-computer-1920x1080.jpg' widht='1280px' height='720px'>
+			</div>
+			<div class='item'>
+				<img src='http://i.imgur.com/VlkmOEW.jpg' widht='1280px' height='720px'>
+			</div>
+		</div>
+		<!-- left and right controls -->
+  		<a class='left carousel-control' href='#firstCarousel' role='button' data-slide='prev'>
+   			<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+			<span class="sr-only">Previous</span>
+		</a>
+		<a class='right carousel-control' href='#firstCarousel' role='button' data-slide='next'>
+			<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+			<span class="sr-only">Next</span>
+		</a>
 	</div>
 </body>
 </html>
