--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
   	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script> <!-- Bootstrap -->
   	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script><!-- JQuery library -->
 	<link rel="stylesheet" type="text/css" href="style.css"/> <!-- CSS Style -->
+	<style>
+		.carousel-inner > .item > img {
+			height:500px;
+			margin:auto;
+		}
+	</style>
 </head>
 <body>
 	<div id='firstCarousel' class='carousel slide' data-ride="carousel"> <!-- carousel -->
