--- a/index.html
+++ b/index.html
@@ -19,51 +19,39 @@
 	</style>
 </head>
 <body>
-<div id="myCarousel" class="carousel slide" data-ride="carousel">
-    <!-- Indicators -->
-    <ol class="carousel-indicators">
-      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-      <li data-target="#myCarousel" data-slide-to="1"></li>
-      <li data-target="#myCarousel" data-slide-to="2"></li>
-    </ol>
-
-    <!-- Wrapper for slides -->
-    <div class="carousel-inner" role="listbox">
-      <div class="item active">
-        <img src="http://i.imgur.com/VlkmOEW.jpg" alt="New York" width="1200" height="700">
-        <div class="carousel-caption">
-          <h3>New York</h3>
-          <p>The atmosphere in New York is lorem ipsum.</p>
-        </div>
-      </div>
-
-      <div class="item">
-        <img src="http://i.imgur.com/VlkmOEW.jpg" alt="Chicago" width="1200" height="700">
-        <div class="carousel-caption">
-          <h3>Chicago</h3>
-          <p>Thank you, Chicago - A night we won't forget.</p>
-        </div>
-      </div>
-    
-      <div class="item">
-        <img src="http://i.imgur.com/VlkmOEW.jpg" alt="Los Angeles" width="1200" height="700">
-        <div class="carousel-caption">
-          <h3>LA</h3>
-          <p>Even though the traffic was a mess, we had the best time playing at Venice Beach!</p>
-        </div>
-      </div>
-    </div>
-
-    <!-- Left and right controls -->
-    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
-</div>
-
+	<div id='firstCarousel' class='carousel slide' data-ride="carousel"> <!-- carousel -->
+		<!-- Indicators -->
+		<ol class="carousel-indicators">
+			<li data-target="#firstCarousel" data-slide-to='0' class="active"></li>
+			<li data-target="#firstCarousel" data-slide-to='1'></li>
+			<li data-target="#firstCarousel" data-slide-to='2'></li>
+			<li data-target="#firstCarousel" data-slide-to='3'></li>
+  		</ol>
+  
+	  	<!-- Content -->
+  		<div class='carousel-inner' role='listbox'>
+   			<div class='item active'>
+    			<img src="http://files.vividscreen.info/soft/d8b781231562545ec6b0f992b9abb81c/Buenos-Aires-Argentina-1920x1080.jpg" widht='1280px' height='720px'>
+		 	</div>
+   			<div class='item'>
+				<img src='http://i.imgur.com/7LqRwsB.jpg' widht='1280px' height='720px'>
+   			</div>
+			<div class='item'>
+    			<img src='http://imgview.info/download/20151025/technology-code-computer-1920x1080.jpg' widht='1280px' height='720px'>
+			</div>
+			<div class='item'>
+				<img src='http://i.imgur.com/VlkmOEW.jpg' widht='1280px' height='720px'>
+			</div>
+		</div>
+		<!-- left and right controls -->
+  		<a class='left carousel-control' href='#firstCarousel' role='button' data-slide='prev'>
+   			<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+			<span class="sr-only">Previous</span>
+		</a>
+		<a class='right carousel-control' href='#firstCarousel' role='button' data-slide='next'>
+			<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+			<span class="sr-only">Next</span>
+		</a>
+	</div>
 </body>
 </html>
