--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 	<title>Nizpott</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1"> <!-- for mobile device -->
+	<link rel="stylesheet" type="text/css" href="style.css"/> <!-- CSS Style -->
+	
   	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   	<link href="http://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css">
   	<link href="http://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet" type="text/css">
