--- a/index.html
+++ b/index.html
@@ -1,54 +1,54 @@
-<!DOCTYPE html>
-<html lang='en'>
-<head>
-	<title>Nizpott</title>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1"> <!-- for mobile device -->
-	<link rel="stylesheet" type="text/css" href="style.css"/> <!-- CSS Style -->
-	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> <!-- Bootstrap -->
-  	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script> <!-- Bootstrap -->
-  	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script><!-- JQuery library -->
-	<style>
-	.carousel-inner img {
-		width: 100%; /* Set width to 100% */
-		margin: auto;
-	}
-	</style>
-</head>
-<body>
-	<div id='firstCarousel' class='carousel slide' data-ride="carousel"> <!-- carousel -->
-		<!-- Indicators -->
-		<ol class="carousel-indicators">
-			<li data-target="#firstCarousel" data-slide-to='0' class="active"></li>
-			<li data-target="#firstCarousel" data-slide-to='1'></li>
-			<li data-target="#firstCarousel" data-slide-to='2'></li>
-			<li data-target="#firstCarousel" data-slide-to='3'></li>
-  		</ol>
-  
-	  	<!-- Content -->
-  		<div class='carousel-inner' role='listbox'>
-   			<div class='item active'>
-    			<img src="http://files.vividscreen.info/soft/d8b781231562545ec6b0f992b9abb81c/Buenos-Aires-Argentina-1920x1080.jpg" widht='1280px' height='720px'>
-		 	</div>
-   			<div class='item'>
-				<img src='http://i.imgur.com/7LqRwsB.jpg' widht='1280px' height='720px'>
-   			</div>
-			<div class='item'>
-    			<img src='http://imgview.info/download/20151025/technology-code-computer-1920x1080.jpg' widht='1280px' height='720px'>
-			</div>
-			<div class='item'>
-				<img src='http://i.imgur.com/VlkmOEW.jpg' widht='1280px' height='720px'>
-			</div>
-		</div>
-		<!-- left and right controls -->
-  		<a class='left carousel-control' href='#firstCarousel' role='button' data-slide='prev'>
-   			<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-			<span class="sr-only">Previous</span>
-		</a>
-		<a class='right carousel-control' href='#firstCarousel' role='button' data-slide='next'>
-			<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-			<span class="sr-only">Next</span>
-		</a>
-	</div>
-</body>
-</html>
+ <!DOCTYPE html>
+ <html lang='en'>
+ <head>
+ 	<title>Nizpott</title>
+ 	<meta charset="utf-8">
+  	<meta name="viewport" content="width=device-width, initial-scale=1"> <!-- for mobile device -->
+  	<link rel="stylesheet" type="text/css" href="style.css"/> <!-- CSS Style -->
+ 	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> <!-- Bootstrap -->
+    	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  	<style>
+ 	.carousel-inner img {
+ 	  width: 100%; /* Set width to 100% */
+     margin: auto;
+   }
+ 	</style>
+ </head>
+ <body>
+ 	<div id='firstCarousel' class='carousel slide' data-ride="carousel"> <!-- carousel -->
+ 		<!-- Indicators -->
+ 		<ol class="carousel-indicators">
+ 			<li data-target="#firstCarousel" data-slide-to='0' class="active"></li>
+ 			<li data-target="#firstCarousel" data-slide-to='1'></li>
+ 			<li data-target="#firstCarousel" data-slide-to='2'></li>
+ 			<li data-target="#firstCarousel" data-slide-to='3'></li>
+   		</ol>
+   
+ 	  	<!-- Content -->
+   		<div class='carousel-inner' role='listbox'>
+    			<div class='item active'>
+     			<img src="http://files.vividscreen.info/soft/d8b781231562545ec6b0f992b9abb81c/Buenos-Aires-Argentina-1920x1080.jpg" widht='1280px' height='720px'>
+ 		 	</div>
+    			<div class='item'>
+ 				<img src='http://i.imgur.com/7LqRwsB.jpg' widht='1280px' height='720px'>
+    			</div>
+ 			<div class='item'>
+     			<img src='http://imgview.info/download/20151025/technology-code-computer-1920x1080.jpg' widht='1280px' height='720px'>
+ 			</div>
+ 			<div class='item'>
+ 				<img src='http://i.imgur.com/VlkmOEW.jpg' widht='1280px' height='720px'>
+ 			</div>
+ 		</div>
+ 		<!-- left and right controls -->
+   		<a class='left carousel-control' href='#firstCarousel' role='button' data-slide='prev'>
+    			<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+ 			<span class="sr-only">Previous</span>
+ 		</a>
+ 		<a class='right carousel-control' href='#firstCarousel' role='button' data-slide='next'>
+ 			<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+ 			<span class="sr-only">Next</span>
+ 		</a>
+ 	</div>
+ </body>
+ </html>
