--- a/index.html
+++ b/index.html
@@ -28,16 +28,16 @@
  	  	<!-- Content -->
    		<div class='carousel-inner' role='listbox'>
     			<div class='item active'>
-     			<img src="http://files.vividscreen.info/soft/d8b781231562545ec6b0f992b9abb81c/Buenos-Aires-Argentina-1920x1080.jpg" widht='1280px' height='720px'>
+     			<img src="http://i.imgur.com/un1UwJs.jpg" widht='1280px' height='720px'>
  		 	</div>
     			<div class='item'>
- 				<img src='http://i.imgur.com/7LqRwsB.jpg' widht='1280px' height='720px'>
+ 				<img src='http://i.imgur.com/mpYowOE.jpg' widht='1280px' height='720px'>
     			</div>
  			<div class='item'>
-     			<img src='http://imgview.info/download/20151025/technology-code-computer-1920x1080.jpg' widht='1280px' height='720px'>
+     			<img src='http://i.imgur.com/MmmyxBW.jpg' widht='1280px' height='720px'>
  			</div>
  			<div class='item'>
- 				<img src='http://i.imgur.com/VlkmOEW.jpg' widht='1280px' height='720px'>
+ 				<img src='http://i.imgur.com/Jhji1gq.jpg' widht='1280px' height='720px'>
  			</div>
  		</div>
  		<!-- left and right controls -->
