--- a/index.html
+++ b/index.html
@@ -16,6 +16,19 @@
  	</style>
  </head>
  <body>
+    <nav id='nav' class="navbar">
+        <div class="container-fluid">
+            <div class='navbar-header'>
+                <a class='navbar-brand' href='#'></a>
+            </div>
+            <ul class='navbar nav'>
+                <li class='active'><a href='#'>Home</a></li>
+                <li><a href='#'>Second</a></li>
+                <li><a href='#'>Third</a></li>
+                <li><a href='#'>About us</a></li>
+            </ul>
+        </div>
+    </nav> 
  	<div id='firstCarousel' class='carousel slide' data-ride="carousel"> <!-- carousel -->
  		<!-- Indicators -->
  		<ol class="carousel-indicators">
