--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
  	</style>
  </head>
  <body>
-    <nav id='nav' class="navbar">
+    <nav id='nav' class="navbar navbar-inverse">
         <div class="container-fluid">
             <div class='navbar-header'>
                 <a class='navbar-brand' href='#'></a>
