--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class='navbar-header'>
                 <a class='navbar-brand' href='#'></a>
             </div>
-            <ul class='navbar nav navbar-right'>
+            <ul class='nav navbar-nav navbar-right'>
                 <li class='active'><a href='#'>Home</a></li>
                 <li><a href='#'>Second</a></li>
                 <li><a href='#'>Third</a></li>
