--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <nav id='nav' class="navbar navbar-inverse navbar-fixed-top">
         <div class="container-fluid">
             <div class='navbar-header'>
-                <a class='navbar-brand' href='#'></a>
+                <a class='navbar-brand' href='#'>Nizpott Store</a>
             </div>
             <ul class='nav navbar-nav navbar-right'>
                 <li class='active'><a href='#'>Home</a></li>
