--- a/index.html
+++ b/index.html
@@ -40,16 +40,16 @@
    
  	  	<!-- Content -->
    		<div class='carousel-inner' role='listbox'>
-    			<div class='item active'>
+    			<div id='carouselImage1' class='item active'>
      			<img src="http://i.imgur.com/un1UwJs.jpg" widht='1280px' height='720px'>
  		 	</div>
-    			<div class='item'>
+    			<div id='carouselImage2' class='item'>
  				<img src='http://i.imgur.com/mpYowOE.jpg' widht='1280px' height='720px'>
     			</div>
- 			<div class='item'>
+ 			<div id='carouselImage3' class='item'>
      			<img src='http://i.imgur.com/MmmyxBW.jpg' widht='1280px' height='720px'>
  			</div>
- 			<div class='item'>
+ 			<div id='carouselImage4' class='item'>
  				<img src='http://i.imgur.com/Jhji1gq.jpg' widht='1280px' height='720px'>
  			</div>
  		</div>
