--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
  	  	<!-- Content -->
    		<div class='carousel-inner' role='listbox'>
    		    <div id='carouselImage1' class='item active'>
-   		        
+   		        <h1>HOOola</h1>
  		 	</div>
     		<div id='carouselImage2' class='item'>
  			    <img src='http://i.imgur.com/mpYowOE.jpg' widht='1280px' height='720px'>
