--- a/index.html
+++ b/index.html
@@ -31,20 +31,31 @@
  			<li data-target="#firstCarousel" data-slide-to='2'></li>
  			<li data-target="#firstCarousel" data-slide-to='3'></li>
    		</ol>
-   
  	  	<!-- Content -->
    		<div class='carousel-inner' role='listbox'>
    		    <div id='carouselImage1' class='item active'>
-   		        <h1>HOOola</h1>
+   		        <img src='http://i.imgur.com/Jhji1gq.jpg' widht='1280px' height='720px'>
+   		        <div class="carousel-caption">
+   		            <h1>Welcome to technology of the future</h1>
+   		        </div>
  		 	</div>
     		<div id='carouselImage2' class='item'>
  			    <img src='http://i.imgur.com/mpYowOE.jpg' widht='1280px' height='720px'>
+ 			    <div class="carousel-caption">
+   		            <h1>The best software for your company</h1>
+   		        </div>
     		</div>
  			<div id='carouselImage3' class='item'>
      			<img src='http://i.imgur.com/MmmyxBW.jpg' widht='1280px' height='720px'>
+     			<div class="carousel-caption">
+   		            <h1>From Argentina to the entire world</h1>
+   		        </div>
  			</div>
  			<div id='carouselImage4' class='item'>
- 				<img src='http://i.imgur.com/Jhji1gq.jpg' widht='1280px' height='720px'>
+ 				<img src='http://i.imgur.com/un1UwJs.jpg' widht='1280px' height='720px'>
+ 				<div class="carousel-caption">
+   		            <h2>Ours servers have all the security you need</h2>
+   		        </div>
  			</div>
  		</div>
  		<!-- left and right controls -->
