--- a/index.html
+++ b/index.html
@@ -69,5 +69,16 @@
  			<span class="sr-only">Next</span>
  		</a>
  	</div>
+ 	<div class='container'>
+ 	        <div class='cl-sm-4'>
+ 	                <h1>je</h1>
+ 	        </div>
+ 	        <div class='cl-sm-4'>
+ 	                <h1>je</h1>
+ 	        </div>
+ 	        <div class='cl-sm-4'>
+ 	                <h1>je</h1>
+ 	        </div>
+ 	</div>
  </body>
  </html>
