--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
  		</a>
  	</div>
  	<div class='container'>
+ 	 <div class='row'>
  	        <div class='cl-sm-4'>
  	                <h1>je</h1>
  	        </div>
@@ -79,6 +80,7 @@
  	        <div class='cl-sm-4'>
  	                <h1>je</h1>
  	        </div>
+ 	 </div>
  	</div>
  </body>
  </html>
