--- a/index.html
+++ b/index.html
@@ -71,13 +71,13 @@
  	</div>
  	<div class='container'>
  	 <div class='row'>
- 	        <div class='cl-sm-4'>
+ 	        <div class='col-sm-4'>
  	                <h1>je</h1>
  	        </div>
- 	        <div class='cl-sm-4'>
+ 	        <div class='col-sm-4'>
  	                <h1>je</h1>
  	        </div>
- 	        <div class='cl-sm-4'>
+ 	        <div class='col-sm-4'>
  	                <h1>je</h1>
  	        </div>
  	 </div>
