--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
  			<span class="sr-only">Next</span>
  		</a>
  	</div>
- 	<div class='container'>
+ 	<div class='container-fluid text-center'>
  	 <div class='row'>
  	        <div class='col-sm-4'>
  	                <h1>je</h1>
