--- a/index.html
+++ b/index.html
@@ -72,13 +72,13 @@
  	<div class='container-fluid text-center'>
  	 <div class='row'>
  	        <div class='col-sm-4'>
- 	                <h1>je</h1>
+ 	                <h1 class="iconos">je</h1>
  	        </div>
  	        <div class='col-sm-4'>
- 	                <h1>je</h1>
+ 	                <h1 class='iconos'>je</h1>
  	        </div>
  	        <div class='col-sm-4'>
- 	                <h1>je</h1>
+ 	                <h1 class='iconos'>je</h1>
  	        </div>
  	 </div>
  	</div>
