--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
    		    <div id='carouselImage1' class='item active'>
    		        <img src='http://i.imgur.com/Jhji1gq.jpg' widht='1280px' height='720px'>
    		        <div class="carousel-caption">
-   		            <h1>Welcome to technology of the future</h1>
+   		            <h1>Welcome to the technology of the future</h1>
    		        </div>
  		 	</div>
     		<div id='carouselImage2' class='item'>
@@ -72,7 +72,7 @@
  	<div class='container-fluid text-center'>
  	 <div class='row'>
  	        <div class='col-sm-4'>
- 	                <h1 class="iconos">je</h1>
+ 	                <h1 class="iconos"><span class="glyphicon glyphicon-off logo-small"></span></h1>
  	        </div>
  	        <div class='col-sm-4'>
  	                <h1 class='iconos'>je</h1>
