--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
  			<span class="sr-only">Next</span>
  		</a>
  	</div>
- 	<div class='container-fluid text-center'>
+ 	<div class='container-fluid text-center'>          <!-- iconos -->
  	 <div class='row'>
  	        <div class='col-sm-4'>
- 	                <h1 class="iconos"><span class="glyphicon glyphicon-off logo-small"></span></h1>
+ 	                <h1 class="iconos"><span class="glyphicon glyphicon-off"></span></h1>
  	        </div>
  	        <div class='col-sm-4'>
  	                <h1 class='iconos'>je</h1>
