--- a/index.html
+++ b/index.html
@@ -73,12 +73,18 @@
  	 <div class='row'>
  	        <div class='col-sm-4'>
  	                <h1 class="iconos"><span class="glyphicon glyphicon-off"></span></h1>
+ 	                <h2>POWER</h2><br>
+ 	                <p>We build one of the most powerfull software</p>
  	        </div>
  	        <div class='col-sm-4'>
- 	                <h1 class='iconos'>je</h1>
+ 	                <h1 class='iconos'><span class="glyphicon glyphicon-leaf"></span></h1>
+ 	                <h2>ECOLOGIC</h2><br>
+ 	                <p>Ours products saves energy</p>
  	        </div>
  	        <div class='col-sm-4'>
- 	                <h1 class='iconos'>je</h1>
+ 	                <h1 class='iconos'><span class="glyphicon glyphicon-wrench"></span></h1>
+ 	                <h2>HARD WORK</h2><br>
+ 	                <p>Support 24 hours</p>
  	        </div>
  	 </div>
  	</div>
