--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
  			<span class="sr-only">Next</span>
  		</a>
  	</div>
- 	<div class='container-fluid text-center'>          <!-- iconos -->
+ 	<div id='iconos' class='container-fluid text-center'>          <!-- iconos -->
  	 <div class='row'>
  	        <div class='col-sm-4'>
  	                <h1 class="iconos"><span class="glyphicon glyphicon-off"></span></h1>
