--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
  </head>
  <body>
-    <nav id='nav' class="navbar navbar-fixed-top">
+    <nav id='nav' class="navbar navbar-default navbar-fixed-top">
         <div class="container-fluid">
             <div class='navbar-header'>
                 <a class='navbar-brand' href='#'>Nizpott Store</a>
