--- a/index.html
+++ b/index.html
@@ -88,5 +88,8 @@
  	        </div>
  	 </div>
  	</div>
+ 	<div id='company' class='container-fluid text-center'>
+ 	    
+ 	</div>
  </body>
  </html>
