Update and rename index.php to index.html

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
    		    <div id='carouselImage1' class='item active'>
    		        <img src='http://i.imgur.com/Jhji1gq.jpg' widht='1280px' height='720px'>
    		        <div class="carousel-caption">
-   		            <h1>Welcome to the technology of the future <php echo 'hola'; ?> </h1>
+   		            <h1>Welcome to the technology of the future</h1>
    		        </div>
  		 	</div>
     		<div id='carouselImage2' class='item'>
