--- a/test.html
+++ b/test.html
@@ -1,7 +1,7 @@
-<!DOCTYPE HTML>  
-<html>
-<head>
-    <title>Nizpott</title>
+<!DOCTYPE html>
+ <html lang='en'>
+ <head>
+ 	<title>Nizpott</title>
  	<meta charset="utf-8">
   	<meta name="viewport" content="width=device-width, initial-scale=1"> <!-- for mobile device -->
   	<link rel="stylesheet" type="text/css" href="style.css"/> <!-- CSS Style -->
@@ -9,15 +9,12 @@
     <link href="http://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <style>
-    .error {color: #FF0000;}
-    </style>
-</head>
-<body>  
+ </head>
+ <body>
     <nav id='nav' class="navbar navbar-default navbar-fixed-top">
         <div class="container-fluid">
             <div class='navbar-header'>
-                <a class='navbar-brand' href='#'>Nizpott Store</a>
+                <a class='navbar-brand' href='http://nizpott.hol.es/'>Nizpott Store</a>
             </div>
             <ul class='nav navbar-nav navbar-right'>
                 <li class='active'><a href='#'>Home</a></li>
@@ -26,95 +23,90 @@
                 <li><a href='#'>About us</a></li>
             </ul>
         </div>
-    </nav>
-    <div id='formularioComentario' class='conteiner text-center'> 
-        <?php
-        // define variables and set to empty values
-        $nameErr = $emailErr = $genderErr = $websiteErr = "";
-        $name = $email = $gender = $comment = $website = "";
-        if ($_SERVER["REQUEST_METHOD"] == "POST") {
-            if (empty($_POST["name"])) {
-                $nameErr = "Name is required";
-            } else {
-                $name = test_input($_POST["name"]);
-                // check if name only contains letters and whitespace
-                if (!preg_match("/^[a-zA-Z ]*$/",$name)) {
-                    $nameErr = "Only letters and white space allowed"; 
-                }
-            }
-            if (empty($_POST["email"])) {
-                $emailErr = "Email is required";
-            } else {
-                $email = test_input($_POST["email"]);
-                // check if e-mail address is well-formed
-                if (!filter_var($email, FILTER_VALIDATE_EMAIL)) {
-                    $emailErr = "Invalid email format"; 
-                }
-            }
-            if (empty($_POST["website"])) {
-                $website = "";
-            } else {
-                $website = test_input($_POST["website"]);
-                // check if URL address syntax is valid (this regular expression also allows dashes in the URL)
-                if (!preg_match("/\b(?:(?:https?|ftp):\/\/|www\.)[-a-z0-9+&@#\/%?=~_|!:,.;]*[-a-z0-9+&@#\/%=~_|]/i",$website)) {
-                    $websiteErr = "Invalid URL"; 
-                }
-            }
-            if (empty($_POST["comment"])) {
-                $comment = "";
-            } else {
-                $comment = test_input($_POST["comment"]);
-            }
-            if (empty($_POST["gender"])) {
-                $genderErr = "Gender is required";
-            } else {
-                $gender = test_input($_POST["gender"]);
-            }
-        }
-
-        function test_input($data) {
-            $data = trim($data);
-            $data = stripslashes($data);
-            $data = htmlspecialchars($data);
-            return $data;
-        }
-        ?> 
-    <!-- Me cance de espaciar el codigo -->
-
-<h2>PHP Form Validation Example</h2>
-<p><span class="error">* required field.</span></p>
-<form method="post" action="<?php echo htmlspecialchars($_SERVER["PHP_SELF"]);?>">  
-  Name: <input type="text" name="name" value="<?php echo $name;?>">
-  <span class="error">* <?php echo $nameErr;?></span>
-  <br><br>
-  E-mail: <input type="text" name="email" value="<?php echo $email;?>">
-  <span class="error">* <?php echo $emailErr;?></span>
-  <br><br>
-  Website: <input type="text" name="website" value="<?php echo $website;?>">
-  <span class="error"><?php echo $websiteErr;?></span>
-  <br><br>
-  Comment: <textarea name="comment" rows="5" cols="40"><?php echo $comment;?></textarea>
-  <br><br>
-  Gender:
-  <input type="radio" name="gender" <?php if (isset($gender) && $gender=="female") echo "checked";?> value="female">Female
-  <input type="radio" name="gender" <?php if (isset($gender) && $gender=="male") echo "checked";?> value="male">Male
-  <span class="error">* <?php echo $genderErr;?></span>
-  <br><br>
-  <input type="submit" name="submit" value="Submit">  
-</form>
-
-<?php
-echo "<h2>Your Input:</h2>";
-echo $name;
-echo "<br>";
-echo $email;
-echo "<br>";
-echo $website;
-echo "<br>";
-echo $comment;
-echo "<br>";
-echo $gender;
-?>
-</div>
+    </nav> 
+ 	<div id='firstCarousel' class='carousel slide' data-ride="carousel"> <!-- carousel -->
+ 		<!-- Indicators -->
+ 		<ol class="carousel-indicators">
+ 			<li data-target="#firstCarousel" data-slide-to='0' class="active"></li>
+ 			<li data-target="#firstCarousel" data-slide-to='1'></li>
+ 			<li data-target="#firstCarousel" data-slide-to='2'></li>
+ 			<li data-target="#firstCarousel" data-slide-to='3'></li>
+   		</ol>
+ 	  	<!-- Content -->
+   		<div class='carousel-inner' role='listbox'>
+   		    <div id='carouselImage1' class='item active'>
+   		        <img src='http://i.imgur.com/Jhji1gq.jpg' widht='1280px' height='720px'>
+   		        <div class="carousel-caption">
+   		            <h1>Welcome to the technology of the future</h1>
+   		        </div>
+ 		 	</div>
+    		<div id='carouselImage2' class='item'>
+ 			    <img src='http://i.imgur.com/mpYowOE.jpg' widht='1280px' height='720px'>
+ 			    <div class="carousel-caption">
+   		            <h1>The best software for your company</h1>
+   		        </div>
+    		</div>
+ 			<div id='carouselImage3' class='item'>
+     			<img src='http://i.imgur.com/MmmyxBW.jpg' widht='1280px' height='720px'>
+     			<div class="carousel-caption">
+   		            <h1>From Argentina to the entire world</h1>
+   		        </div>
+ 			</div>
+ 			<div id='carouselImage4' class='item'>
+ 				<img src='http://i.imgur.com/un1UwJs.jpg' widht='1280px' height='720px'>
+ 				<div class="carousel-caption">
+   		            <h2>Ours servers have all the security you need</h2>
+   		        </div>
+ 			</div>
+ 		</div>
+ 		<!-- left and right controls -->
+   		<a class='left carousel-control' href='#firstCarousel' role='button' data-slide='prev'>
+    			<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+ 			<span class="sr-only">Previous</span>
+ 		</a>
+ 		<a class='right carousel-control' href='#firstCarousel' role='button' data-slide='next'>
+ 			<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+ 			<span class="sr-only">Next</span>
+ 		</a>
+ 	</div>
+ 	<div id='iconos' class='container-fluid text-center'>          <!-- iconos -->
+ 	 <div class='row'>
+ 	        <div class='col-sm-4'>
+ 	                <h1 class="iconos"><span class="glyphicon glyphicon-off"></span></h1>
+ 	                <h3>POWER</h3><br>
+ 	                <p>We build one of the most powerfull software</p>
+ 	        </div>
+ 	        <div class='col-sm-4'>
+ 	                <h1 class='iconos'><span class="glyphicon glyphicon-leaf"></span></h1>
+ 	                <h3>ECOLOGIC</h3><br>
+ 	                <p>Ours products saves energy</p>
+ 	        </div>
+ 	        <div class='col-sm-4'>
+ 	                <h1 class='iconos'><span class="glyphicon glyphicon-wrench"></span></h1>
+ 	                <h3>HARD WORK</h3><br>
+ 	                <p>Support 24 hours</p>
+ 	        </div>
+ 	 </div>
+ 	</div>
+ 	<div id='formularioComentario' class='conteiner'> 
+        <from class='form-horizontal' role='from'>
+            <div class='form-group'>
+                <label class='control-labe' for='name'>Name:</label>
+                <imput class="form-control" id='name' type='text' placeholder='Name'>
+            </div>
+            <div class='form-group'>
+                <label class='control-label' for='email'>Email:</label>
+                <imput class="form-control" id='email' type='text' placeholder='Email'>
+            </div>
+            <div class='form-group'>
+                <label class='control-label' for='website'>Website (Optional):</label>
+                <imput class="form-control" id='website' type='text' placeholder='Website'>
+            </div>
+            <div class='form-group'>
+                 <label class='control-label' for='comment'>Coment:</label>
+                 <textarea id='comment' name='comment' rows='5' cols='40'></textarea>
+            </div>
+        </from>
+    </div>
 </body>
-</html>		
+</html>
