--- a/test.html
+++ b/test.html
@@ -95,17 +95,52 @@
  	        </div>
  	 </div>
  	</div>
- 	<div id='footer' class='conteiner-fluid'>
+ 	<div id='footer' class='conteiner'>
  	    <div class='row'>
- 	        <div class='col-sm-2'></div>
  	        <div class='col-sm-3'>
- 	            <h4>Some text</h4>
+ 	            <h5><b>Quick Links</b></h5><br>
+ 	            <ul>
+ 	                <li>Source Code on Github</li>
+ 	                <li>API Documentation</li>
+ 	                <li>Weekly Extension Updates</li>
+ 	                <li>Troubleshooting Help</li>
+ 	                <li>Wiki</li>
+ 	            </ul>
  	        </div>
- 	        <div class='col-sm-2'></div>
  	        <div class='col-sm-3'>
- 	            <h4>Some text</h4>
+ 	            <h5><b>Videos</b></h5>
+ 	            <ul>
+ 	                <li>Introducing Brackets</li>
+ 	                <li>Live Development for HTML</li>
+ 	                <li>JavaScript Debugger for Brackets</li>
+ 	                <li>Tuts+ Introduction to Brackets</li>
+ 	                <li>Brackets Videos on Youtube</li>
+ 	            </ul>
  	        </div>
- 	        <div class='col-sm-2'></div>
+ 	        <div class='col-sm-3'>
+ 	            <h5><b>Get Involved</b></h5>
+ 	            <ul>
+ 	                <li>Suggest a Feature</li>
+ 	                <li>View Backlog on Trello</li>
+ 	                <li>Track Our Progress on Waffle</li>
+ 	                <li>Discuss on Google Groups</li>
+ 	                <li>Chat on IRC at Freenode/#Brackets</li>
+ 	                <li>Checkout Current Issues on GitHub</li>
+ 	            </ul>
+ 	        </div>
+ 	        <div class='col-sm-3'>
+ 	            <h5><b>Keep in Touch</b></h5>
+ 	            <ul>
+ 	                <li>Twitter</li>
+ 	                <li>Facebook</li>
+ 	                <li>Google+</li>
+ 	                <li>Instagram</li>
+ 	            </ul>
+ 	        </div>
+ 	    </div>
+ 	    <div class='row text-center'>
+ 	        <p><b>This page is just for testing</b></p>
+ 	        <p>&copy; <?php echo date("Y");?></p>
  	    </div>
  	</div>
 </body>
